RESOLVED FIXED255991
[IFC][truncation] Content gets truncated too early caused by subpixel flooring
https://bugs.webkit.org/show_bug.cgi?id=255991
Summary [IFC][truncation] Content gets truncated too early caused by subpixel flooring
alan
Reported 2023-04-26 09:47:09 PDT
ssia
Attachments
Patch (4.37 KB, patch)
2023-04-26 09:57 PDT, alan
no flags
Patch (4.30 KB, patch)
2023-04-26 10:01 PDT, alan
no flags
[fast-cq]Patch (4.30 KB, patch)
2023-04-26 10:06 PDT, alan
no flags
alan
Comment 1 2023-04-26 09:57:20 PDT
alan
Comment 2 2023-04-26 10:01:58 PDT
alan
Comment 3 2023-04-26 10:06:02 PDT
Created attachment 466102 [details] [fast-cq]Patch
EWS Watchlist
Comment 4 2023-04-26 10:08:49 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
EWS
Comment 5 2023-04-26 12:39:12 PDT
Committed 263428@main (dc24ddb00a13): <https://commits.webkit.org/263428@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466102 [details].
Radar WebKit Bug Importer
Comment 6 2023-04-26 12:40:23 PDT
Note You need to log in before you can comment on or make changes to this bug.