[IFC][truncation] Content gets truncated too early caused by subpixel flooring https://bugs.webkit.org/show_bug.cgi?id=255991

Reviewed by Antti Koivisto.

This is caused by using LayoutUnit on block level to set the constraint value on the inline content,
while using InlineLayoutUnit (float) to accumulate inline content on the line.
e.g. <div width="10ch"> with ch length of 7.82px -> 78.2px which gets turned into a LayoutUnit : 5004.8 -> floored to 5004 raw value.

This is similar to what we do for regular line breaking at LineBuilder:availableWidth.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/text-overflow-028.html:
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLineBuilder.cpp:
(WebCore::Layout::truncateOverflowingDisplayBoxes):

Canonical link: https://commits.webkit.org/263428@main